# Just-The-Bot-github

./: README.md  covid19.json  main.py  pyproject.toml  readme.txt  skin.py
cmds/:  error.py  admin.py  corona.py  error.py  fun.py  game.py  help.py  hyp.py  info.py  main.py  math.py  snipe.py  welcome.py
cmds/__pycache__/: admin.cpython-38.py
