[tool.poetry]
name = "repl_python3_ROC"
version = "0.1.0"
description = ""
authors = ["kuan 🇹🇼#6503"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.0.1"
flask = "^1.1.2"
utils = "^1.0.1"
imgurpython = "^1.1.7"
praw = "^7.1.0"
config = "^0.5.0"
dblpy = "^0.4.0"
pandas = "^1.2.1"
flatten-json = "^0.1.8"
arrow = "^0.17.0"
bs4 = "^0.0.1"
cryptography = "^3.3.1"
python-dotenv = "^0.15.0"
pyrandmeme = "^0.0.6"
hypixel = "^0.7.9"
google-api-python-client = "^2.1.0"
ytdl = "^1.0.0-rc.5"
youtube-dl = "^2021.4.26"
discord-ext-slash = "^0.8.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
